# bdva2015

./: .gitignore  .gitmodules  LICENSE  README.md
examples/: basic.fs  colors.glsl  common.glsl  cubes.glsl  debug_normals.gs  fresnel.fs  noop.vs  quad_2.gs  quad_4.gs  surfaces.glsl  tess.tcs  tess_1.tes  uniforms.glsl
examples/part1/: CMakeLists.txt
examples/part1/CMakeModules/: FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  Findmcpp.cmake
examples/part1/demo/: demo.sln  demo.vcxproj  demo.vcxproj.filters
examples/part1/shaders/: 01_basic.frag  01_basic.vert  02_basic.frag  02_basic.vert  03_basic_uniform.vert  diffuse.frag  diffuse.vert  phong.frag  phong.vert
examples/part1/src/: demo01.h  demo02.h  demo03.h  demo04.h  glsl-program.cpp  glsl-program.h  main.cpp  mcpp.h  object.cpp  object.h  scene-3ds.cpp  scene-3ds.h  scene.cpp  scene.h  vbo-cube.cpp  vbo-cube.h
examples/part2/: background.fs  basic.fs  colors.glsl  common.glsl  debug_edges.gs  fresnel.fs  lights.glsl  materials.glsl  math.glsl  pass.vs  phong.fs  quad_0.gs  quad_2.gs  quad_3.gs  tess.tcs  tess_0.tes  tess_2.tes  tess_3.tes
examples/part3/: README  webgl_basic.html  webgl_shader.html
slides/: README.md
slides/webgl/: index.html
slides/webgl/css/: style.css
slides/webgl/js/: OrbitControls.js  present.js
